fixed bottom chat not auto closing when changing streams

--- a/src/index.css
+++ b/src/index.css
@@ -264,6 +264,7 @@ body {
   font-size: 2.4rem;
   margin-bottom: 0.4rem;
   line-height: 1.1;
+  color: var(--color-red);
 }
 
 .details-overview p {
